spotify-music: added download button

--- a/spotify-music/index.html
+++ b/spotify-music/index.html
@@ -41,7 +41,8 @@
             <a href="playlist.html" class="playlist-btn-link" title="Select Playlist">
                 <img src="assets/images/playlist.png" alt="Spotify Playlists" draggable="false">
             </a>
-            <a href="https://google.com" id="spotify-link" class="spotify-link" target="_blank" title="Listnen on Spotify">
+            <a id="download-link" class="download-link" title="Download Preview Song"><i class="far fa-arrow-alt-circle-down"></i></a>
+            <a id="spotify-link" class="spotify-link" title="Listnen on Spotify">
                 <img src="assets/images/listen-on-spotify-button.png" alt="Spotify" draggable="false">
             </a>
         </div>
