spotify-music player UI improved for desktop and mobile

--- a/spotify-music/index.html
+++ b/spotify-music/index.html
@@ -14,22 +14,24 @@
         <div class="img-container">
             <img id="album-cover" src="https://i.scdn.co/image/ab67616d0000b273e4be675de3a03b2ad2552c6d" alt="Album Art" draggable="false">
         </div>
-        <h2 id="title">Malang Sajna</h2>
-        <h3 id="artist">Sachet Tandon</h3>
-        <audio src="https://p.scdn.co/mp3-preview/adc1a73cffab5e6edea79f5a481257068f929f46?cid=48b75718e8954b2584c354edb7016720"></audio>
-        <!-- Progress -->
-        <div class="progress-container" id="progress-container">
-            <div class="progress" id="progress"></div>
-            <div class="duration-wrapper">
-                <span id="current-time">0.00</span>
-                <span id="duration">0.29</span>
+        <div class="player-section">
+            <h2 id="title">Malang Sajna</h2>
+            <h3 id="artist">Sachet Tandon</h3>
+            <audio src="https://p.scdn.co/mp3-preview/adc1a73cffab5e6edea79f5a481257068f929f46?cid=48b75718e8954b2584c354edb7016720"></audio>
+            <!-- Progress -->
+            <div class="progress-container" id="progress-container">
+                <div class="progress" id="progress"></div>
+                <div class="duration-wrapper">
+                    <span id="current-time">0.00</span>
+                    <span id="duration">0.29</span>
+                </div>
             </div>
-        </div>
-        <!-- Controls -->
-        <div class="player-controls">
-            <i class="fas fa-step-backward" id="prev" title="Previous"></i>
-            <i class="fas fa-play-circle main-button" id="play" title="Play"></i>
-            <i class="fas fa-step-forward" id="next" title="Next"></i>
+            <!-- Controls -->
+            <div class="player-controls">
+                <i class="fas fa-step-backward" id="prev" title="Previous"></i>
+                <i class="fas fa-play-circle main-button" id="play" title="Play"></i>
+                <i class="fas fa-step-forward" id="next" title="Next"></i>
+            </div>
         </div>
     </div>
     <div class="spotify-container">
