spotify-music meta tags added

--- a/spotify-music/index.html
+++ b/spotify-music/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify Music</title>
+    <meta property="og:title" content="Spotify Music | ajinkyacodes">
+    <meta property="og:description" content="This is a music player web app with spotify preview songs.">
+    <meta name="keywords" content="ajinkya, codes, ajinkyacodes, ajinkya, gonji, ajinkyagonji, webdeveloper, developer, fullstack, programmer, github, spotify, spotify-music">
+    <meta property="og:image" content="https://ajinkyacodes.github.io/javascript-apps/spotify-music/favicon.png">
+    <meta property="og:url" content="https://ajinkyacodes.github.io/javascript-apps/spotify-music">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>
     <link rel="icon" href="favicon.png" type="image/gif" sizes="16x16">
     <link rel="stylesheet" href="assets/css/style.css">
