expense-tracker developer info added

--- a/expense-tracker/index.html
+++ b/expense-tracker/index.html
@@ -61,6 +61,9 @@
 				<option value="INR">₹</option>
 				<option value="NONE">&ndash;</option>
 			</select>
+			<div class="developer-container">
+				<p>Developed By: <a href="https://github.com/ajinkyacodes" target="_blank">ajinkyacodes</a></p>
+			</div>
 		</div>
 		<script src="app.js"></script>
 	</body>
