expense-tracker meta tags added

--- a/expense-tracker/index.html
+++ b/expense-tracker/index.html
@@ -4,6 +4,11 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Expense Tracker</title>
+		<meta property="og:title" content="Expense Tracker | ajinkyacodes">
+		<meta property="og:description" content="This app tracks your income and expenses by adding the transaction details.">
+		<meta name="keywords" content="ajinkya, codes, ajinkyacodes, ajinkya, gonji, ajinkyagonji, webdeveloper, developer, fullstack, programmer, github, expense, expense-tracker">
+		<meta property="og:image" content="https://ajinkyacodes.github.io/javascript-apps/expense-tracker/favicon.png">
+		<meta property="og:url" content="https://ajinkyacodes.github.io/javascript-apps/expense-tracker">
 		<link rel="stylesheet"
 			href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
 			integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm"
