expense-tracker developer info updated

--- a/expense-tracker/index.html
+++ b/expense-tracker/index.html
@@ -66,8 +66,8 @@
 				<option value="INR">₹</option>
 				<option value="NONE">&ndash;</option>
 			</select>
-			<div class="developer-container">
-				<p>Developed By: <a href="https://github.com/ajinkyacodes" target="_blank">ajinkyacodes</a></p>
+			<div class="developer-container print-hide">
+				<p><a href="https://ajinkyacodes.com" target="_blank">&copy; ajinkyacodes</a></p>
 			</div>
 		</div>
 		<script src="app.js"></script>
