--- a/expense-tracker/index.html
+++ b/expense-tracker/index.html
@@ -60,10 +60,10 @@
 			</form>
 			<button class="print-btn print-hide" onclick="window.print()">Print</button>
 			<select name="currency" id="currency-select" class="currency-select print-hide">
-				<option value="USD" selected>$</option>
-				<option value="EUR">€</option>
-				<option value="GBP">£</option>
-				<option value="INR">₹</option>
+				<option value="USD" selected>USD ($)</option>
+				<option value="EUR">ERUO (€)</option>
+				<option value="GBP">GBP (£)</option>
+				<option value="INR">INR (₹)</option>
 				<option value="NONE">&ndash;</option>
 			</select>
 			<div class="developer-container print-hide">
