expense-tracker Android App link added

--- a/expense-tracker/index.html
+++ b/expense-tracker/index.html
@@ -66,6 +66,13 @@
 				<option value="INR">INR (₹)</option>
 				<option value="NONE">&ndash;</option>
 			</select>
+			<div class="mobile-apps-info">
+				<figure>
+					<a href="https://ajinkyacodes.github.io/javascript-apps/expense-tracker/android/" target="_blank" title="Android App">
+						<img src="android/android-app-logo.png" alt="Expense tracker">
+					</a>
+				</figure>
+			</div>
 			<div class="developer-container print-hide">
 				<p><a href="https://ajinkyacodes.com" target="_blank">&copy; ajinkyacodes</a></p>
 			</div>
