--- a/expense-tracker/index.html
+++ b/expense-tracker/index.html
@@ -61,7 +61,7 @@
 			<button class="print-btn print-hide" onclick="window.print()">Print</button>
 			<select name="currency" id="currency-select" class="currency-select print-hide">
 				<option value="USD" selected>USD ($)</option>
-				<option value="EUR">ERUO (€)</option>
+				<option value="EUR">EURO (€)</option>
 				<option value="GBP">GBP (£)</option>
 				<option value="INR">INR (₹)</option>
 				<option value="NONE">&ndash;</option>
