--- a/expense-tracker/index.html
+++ b/expense-tracker/index.html
@@ -66,7 +66,7 @@
 				<option value="INR">INR (₹)</option>
 				<option value="NONE">&ndash;</option>
 			</select>
-			<div class="mobile-apps-info">
+			<div class="mobile-apps-info print-hide">
 				<figure>
 					<a href="https://ajinkyacodes.github.io/javascript-apps/expense-tracker/android/" target="_blank" title="Android App">
 						<img src="android/android-app-logo.png" alt="Expense tracker">
