expense-tracker app landing page updated

--- a/expense-tracker/android/index.html
+++ b/expense-tracker/android/index.html
@@ -19,16 +19,21 @@
 	<body>
         <div class="container">
             <div class="image-info">
-                <figure>
-                    <img src="https://ajinkyacodes.github.io/javascript-apps/expense-tracker/favicon.png" alt="Expense Tracker">
-                </figure>
+				<figure>
+					<a href="../index.html" title="Web App" class="web-app-link">
+						<img src="https://ajinkyacodes.github.io/javascript-apps/expense-tracker/favicon.png" alt="Expense Tracker">
+						<span>Web App</span>
+					</a>
+				</figure>
                 <div class="info">
                     <h1>Expense Tracker</h1>
                     <p>This app tracks your income and expenses by adding the transaction details.</p>
-                    <a href="expense-tracker-app.apk" class="download-link" title="Download Android APK File" download>
-                        <img src="apk-icon.png" alt="Android APK File">
-                        <span>Download APK</span>
-                    </a>
+					<figure>
+						<a href="expense-tracker-app.apk" class="download-link" title="Download Android APK File" download>
+							<img src="apk-icon.png" alt="Android APK File">
+							<span>Download Android App</span>
+						</a>
+					</figure>
                 </div>
             </div>
         </div>
