--- a/expense-tracker/index.html
+++ b/expense-tracker/index.html
@@ -68,7 +68,7 @@
 			</select>
 			<div class="mobile-apps-info print-hide">
 				<figure>
-					<a href="https://ajinkyacodes.github.io/javascript-apps/expense-tracker/android/" target="_blank" title="Android App">
+					<a href="android/index.html" title="Android App">
 						<img src="android/android-app-logo.png" alt="Expense tracker">
 					</a>
 				</figure>
