--- a/spotify-playlist/playlist.html
+++ b/spotify-playlist/playlist.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spotify Music</title>
-    <meta property="og:title" content="Spotify Music | ajinkyacodes">
-    <meta property="og:description" content="This is a music player web app with spotify preview songs.">
-    <meta name="keywords" content="ajinkya, codes, ajinkyacodes, ajinkya, gonji, ajinkyagonji, webdeveloper, developer, fullstack, programmer, github, spotify, spotify-music">
-    <meta property="og:image" content="https://ajinkyacodes.github.io/javascript-apps/spotify-music/favicon.png">
-    <meta property="og:url" content="https://ajinkyacodes.github.io/javascript-apps/spotify-music">
+    <title>Spotify Playlist</title>
+    <meta property="og:title" content="Spotify Playlist | ajinkyacodes">
+    <meta property="og:description" content="This is a music player web app with spotify playlist search option and preview songs.">
+    <meta name="keywords" content="ajinkya, codes, ajinkyacodes, ajinkya, gonji, ajinkyagonji, webdeveloper, developer, fullstack, programmer, github, spotify, spotify-playlist">
+    <meta property="og:image" content="https://ajinkyacodes.github.io/javascript-apps/spotify-playlist/favicon.png">
+    <meta property="og:url" content="https://ajinkyacodes.github.io/javascript-apps/spotify-playlist">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>
     <link rel="icon" href="favicon.png" type="image/gif" sizes="16x16">
     <link rel="stylesheet" href="assets/css/playlist.css">
