spotify-playlist app developer info added

--- a/spotify-playlist/index.html
+++ b/spotify-playlist/index.html
@@ -53,6 +53,9 @@
                 <img src="assets/images/listen-on-spotify-button.png" alt="Spotify" draggable="false">
             </a>
         </div>
+        <div class="developer-info">
+            <p><a href="https://ajinkyacodes.com" target="_blank">&copy; ajinkyacodes</a></p>
+        </div>
     </div>
     <script src="assets/js/app.js"></script>
 </body>
