spotify-playlist Android App and landing page added

--- a/spotify-playlist/index.html
+++ b/spotify-playlist/index.html
@@ -52,6 +52,9 @@
             <a id="spotify-link" class="spotify-link" title="Listnen on Spotify">
                 <img src="assets/images/listen-on-spotify-button.png" alt="Spotify" draggable="false">
             </a>
+            <a href="android/index.html" class="android-app-link"  title="Android App">
+                <img src="android/android-app-logo.png" alt="Android App">
+            </a>
         </div>
         <div class="developer-info">
             <p><a href="https://ajinkyacodes.com" target="_blank">&copy; ajinkyacodes</a></p>
