--- a/spotify-playlist/playlist.html
+++ b/spotify-playlist/playlist.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify Playlist</title>
     <meta property="og:title" content="Spotify Playlist | ajinkyacodes">
-    <meta property="og:description" content="This is a music player web app with spotify playlist search option and preview songs.">
+    <meta property="og:description" content="This is a music player app with a Spotify playlist search option and preview songs.">
     <meta name="keywords" content="ajinkya, codes, ajinkyacodes, ajinkya, gonji, ajinkyagonji, webdeveloper, developer, fullstack, programmer, github, spotify, spotify-playlist">
     <meta property="og:image" content="https://ajinkyacodes.github.io/javascript-apps/spotify-playlist/favicon.png">
     <meta property="og:url" content="https://ajinkyacodes.github.io/javascript-apps/spotify-playlist">
