todolist app title and meta tags updated

--- a/todolist/index.html
+++ b/todolist/index.html
@@ -3,7 +3,12 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>TODO List</title>
+		<title>TODO List | ajinkyacodes</title>
+		<meta property="og:title" content="TODO List | ajinkyacodes">
+		<meta property="og:description" content="This app tracks your to-do list tasks.">
+		<meta name="keywords" content="ajinkya, codes, ajinkyacodes, ajinkya, gonji, ajinkyagonji, webdeveloper, developer, fullstack, programmer, github, tasks, todo-list">
+		<meta property="og:image" content="https://ajinkyacodes.github.io/javascript-apps/todolist/favicon.png">
+		<meta property="og:url" content="https://ajinkyacodes.github.io/javascript-apps/todolist">
 		<link rel="stylesheet"
 			href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
 			integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm"
