--- a/todolist/index.html
+++ b/todolist/index.html
@@ -34,6 +34,9 @@
 					delete the task.
 				</span>
 			</p>
+			<p class="developer-info">
+				<a href="https://ajinkyacodes.com" target="_blank">&copy; ajinkyacodes</a>
+			</p>
 		</div>
 		<script src="app.js"></script>
 	</body>
