--- a/spotify-playlist/index.html
+++ b/spotify-playlist/index.html
@@ -57,7 +57,7 @@
             </a>
         </div>
         <div class="developer-info">
-            <p><a href="https://ajinkyacodes.com" target="_blank">&copy; ajinkyacodes</a></p>
+            <p><a href="https://ajinkyacodes.github.io/info/" target="_blank">&copy; ajinkyacodes</a></p>
         </div>
     </div>
     <script src="assets/js/app.js"></script>
