--- a/expense-tracker/index.html
+++ b/expense-tracker/index.html
@@ -77,7 +77,7 @@
 					</div>
 				</div>
 				<div class="developer-container print-hide">
-					<p><a href="https://ajinkyacodes.com" target="_blank">&copy; ajinkyacodes</a></p>
+					<p><a href="https://ajinkyacodes.github.io/info/" target="_blank">&copy; ajinkyacodes</a></p>
 				</div>
 			</div>
 		</div>
