--- a/todolist/index.html
+++ b/todolist/index.html
@@ -35,7 +35,7 @@
 				</span>
 			</p>
 			<p class="developer-info">
-				<a href="https://ajinkyacodes.com" target="_blank">&copy; ajinkyacodes</a>
+				<a href="https://ajinkyacodes.github.io/info/" target="_blank">&copy; ajinkyacodes</a>
 			</p>
 		</div>
 		<script src="app.js"></script>
