spotify-playlist app folder structure updated with fonts and fontawesome

--- a/spotify-playlist/index.html
+++ b/spotify-playlist/index.html
@@ -9,8 +9,8 @@
     <meta name="keywords" content="ajinkya, codes, ajinkyacodes, ajinkya, gonji, ajinkyagonji, webdeveloper, developer, fullstack, programmer, github, spotify, spotify-playlist">
     <meta property="og:image" content="https://ajinkyacodes.github.io/javascript-apps/spotify-playlist/favicon.png">
     <meta property="og:url" content="https://ajinkyacodes.github.io/javascript-apps/spotify-playlist">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>
-    <link rel="icon" href="favicon.png" type="image/gif" sizes="16x16">
+    <link href="assets/vendors/fontawesome/css/all.min.css" rel="stylesheet">
+    <link rel="icon" href="assets/images/favicon.png" type="image/gif" sizes="16x16">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
