spotify-playlist Poppins font added. Placeholder image updated

--- a/spotify-playlist/index.html
+++ b/spotify-playlist/index.html
@@ -17,12 +17,12 @@
     <div class="player-container">
         <!-- Song -->
         <div class="img-container">
-            <img id="album-cover" src="https://i.scdn.co/image/ab67616d0000b273e4be675de3a03b2ad2552c6d" alt="Album Art" draggable="false">
+            <img id="album-cover" src="assets/images/album-placeholder.png" alt="Album Art" draggable="false">
         </div>
         <div class="player-section">
-            <h2 id="title">Malang Sajna</h2>
-            <h3 id="artist">Sachet Tandon</h3>
-            <audio src="https://p.scdn.co/mp3-preview/adc1a73cffab5e6edea79f5a481257068f929f46?cid=48b75718e8954b2584c354edb7016720"></audio>
+            <h2 id="title">Spotify Playlist</h2>
+            <h3 id="artist">Artists</h3>
+            <audio src=""></audio>
             <!-- Progress -->
             <div class="progress-container" id="progress-container">
                 <div class="progress" id="progress"></div>
