--- a/spotify-playlist/index.html
+++ b/spotify-playlist/index.html
@@ -25,7 +25,9 @@
             <audio src=""></audio>
             <!-- Progress -->
             <div class="progress-container" id="progress-container">
-                <div class="progress" id="progress"></div>
+                <div class="progress" id="progress">
+                    <span class="progressed" id="progressed"></span>
+                </div>
                 <div class="duration-wrapper">
                     <span id="current-time">0.00</span>
                     <span id="duration">0.29</span>
@@ -56,7 +58,9 @@
         <div class="developer-info">
             <p><a href="https://ajinkyacodes.github.io/info/" target="_blank">&copy;ajinkyacodes</a></p>
         </div>
-    </div>
+    </div>    
+    <script src="assets/vendors/jquery/jquery-1.12.4.min.js" type="text/javascript"></script>
+    <script src="assets/vendors/jquery/jquery-ui.min.js" type="text/javascript"></script>
     <script src="assets/js/app.js"></script>
 </body>
 </html>
