--- a/spotify-playlist/index.html
+++ b/spotify-playlist/index.html
@@ -22,7 +22,7 @@
         <div class="player-section">
             <h2 id="title">Spotify Playlist</h2>
             <h3 id="artist">Artists</h3>
-            <audio src=""></audio>
+            <audio src="assets/music/sample.mp3"></audio>
             <!-- Progress -->
             <div class="progress-container" id="progress-container">
                 <div class="progress" id="progress"></div>
