--- a/spotify-playlist/playlist.html
+++ b/spotify-playlist/playlist.html
@@ -23,14 +23,14 @@
         <form class="playlist-form">
             <input type='hidden' id='hidden_token'>
             <div class="form-control">
-                <label for='Genre'>Genre:</label>
-                <select name='' id='select_genre'>
-                    <option>Select...</option>                    
+                <label>Genre:</label>
+                <select id='select_genre'>
+                    <option>Select...</option>
                 </select>
             </div>
             <div class="form-control">
-                <label for='Genre'>Playlists:</label>
-                <select name='' id='select_playlist'>
+                <label>Playlists:</label>
+                <select id='select_playlist'>
                     <option>Select...</option>
                 </select>
             </div>                  
