--- a/spotify-playlist/playlist.html
+++ b/spotify-playlist/playlist.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Spotify Playlist</title>
     <meta property="og:title" content="Spotify Playlist | ajinkyacodes">
     <meta property="og:description" content="This is a music player app with a Spotify playlist search option and preview songs.">
