spotify-playlist dark-light theme functionality created

--- a/spotify-playlist/index.html
+++ b/spotify-playlist/index.html
@@ -51,7 +51,10 @@
             <a id="download-link" class="download-link" title="Download Preview Song"><i class="far fa-arrow-alt-circle-down"></i></a>
             <a id="spotify-link" class="spotify-link" title="Listnen on Spotify">
                 <img src="assets/images/listen-on-spotify-button.png" alt="Spotify" draggable="false">
-            </a>            
+            </a>
+            <a id="theme-btn"  class="theme-btn">
+                <i class="far fa-sun"></i>
+            </a>
         </div>
         <div class="developer-info">
             <p><a href="https://ajinkyacodes.github.io/info/" target="_blank">&copy;ajinkyacodes</a></p>
