--- a/spotify-playlist/index.html
+++ b/spotify-playlist/index.html
@@ -52,7 +52,7 @@
             <a id="spotify-link" class="spotify-link" title="Listnen on Spotify">
                 <img src="assets/images/listen-on-spotify-button.png" alt="Spotify" draggable="false">
             </a>
-            <a id="theme-btn"  class="theme-btn">
+            <a id="theme-btn"  class="theme-btn" title="Change Theme">
                 <i class="far fa-sun"></i>
             </a>
         </div>
