--- a/spotify-playlist/index.html
+++ b/spotify-playlist/index.html
@@ -56,8 +56,11 @@
                 <i class="far fa-sun"></i>
             </a>
         </div>
-        <div class="developer-info">
-            <p><a href="https://ajinkyacodes.github.io/info/" target="_blank">&copy;ajinkyacodes</a></p>
+        <div id="developer-info" class="developer-info">
+            <!-- <p><a href="https://ajinkyacodes.github.io/info/" target="_blank">&copy;ajinkyacodes</a></p> -->
+            <a href="https://ajinkyacodes.github.io/info/">
+                <img src="assets/images/ajinkyacodes-black.png" alt="ajinkyacodes">
+            </a>
         </div>
     </div>    
     <script src="assets/js/app.js"></script>
