--- a/spotify-playlist/playlist.html
+++ b/spotify-playlist/playlist.html
@@ -39,7 +39,7 @@
             </div>          
         </form>
     </div>
-    <script type="text/javascript" src="env.js"></script>
+    <script src="env.js"></script>
     <script src="assets/js/playlist.js"></script>
 </body>
 </html>
