--- a/todolist/index.html
+++ b/todolist/index.html
@@ -13,8 +13,8 @@
 			href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
 			integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm"
 			crossorigin="anonymous" />
-		<link rel="icon" href="favicon.png" type="image/gif" sizes="16x16">
-		<link rel="stylesheet" href="style.css">
+		<link rel="icon" href="assets/images/favicon.png" type="image/gif" sizes="16x16">
+		<link rel="stylesheet" href="assets/css/style.css">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -38,6 +38,6 @@
 				<a href="https://ajinkyacodes.github.io/info/" target="_blank">&copy; ajinkyacodes</a>
 			</p>
 		</div>
-		<script src="app.js"></script>
+		<script src="assets/js/app.js"></script>
 	</body>
 </html>
