todolist developer-info updated

--- a/todolist/index.html
+++ b/todolist/index.html
@@ -17,7 +17,7 @@
 		<link rel="stylesheet" href="assets/css/style.css">
 	</head>
 	<body>
-		<div class="wrapper">
+		<div class="wrapper">1
 			<h1>TODO List</h1>
 			<form id="form">
 				<input type="text" class="input" id="input" placeholder="Enter Task" autocomplete="off">
@@ -34,9 +34,11 @@
 					delete the task.
 				</span>
 			</p>
-			<p class="developer-info">
-				<a href="https://ajinkyacodes.github.io/info/" target="_blank">&copy; ajinkyacodes</a>
-			</p>
+			<div id="developer-info" class="developer-info">    
+				<a href="https://ajinkyacodes.github.io/info/">
+					<img src="assets/images/ajinkyacodes-black.png" alt="ajinkyacodes">
+				</a>
+			</div>
 		</div>
 		<script src="assets/js/app.js"></script>
 	</body>
