--- a/todolist/index.html
+++ b/todolist/index.html
@@ -34,9 +34,9 @@
 					delete the task.
 				</span>
 			</p>
-			<div id="developer-info" class="developer-info">    
-				<a href="https://ajinkyacodes.github.io/info/">
-					<img src="assets/images/ajinkyacodes-black.png" alt="ajinkyacodes">
+			<div id="developer-info" class="developer-info"> 
+				<a href="https://ajinkyacodes.github.io/info/" draggable="false">
+					<img src="assets/images/ajinkyacodes-black.png" alt="ajinkyacodes" draggable="false">
 				</a>
 			</div>
 		</div>
