--- a/spotify-playlist/index.html
+++ b/spotify-playlist/index.html
@@ -56,9 +56,9 @@
                 <i class="far fa-sun"></i>
             </a>
         </div>
-        <div id="developer-info" class="developer-info">
-            <a href="https://ajinkyacodes.github.io/info/">
-                <img src="assets/images/ajinkyacodes-black.png" alt="ajinkyacodes">
+        <div id="developer-info" class="developer-info"> 
+            <a href="https://ajinkyacodes.github.io/info/" draggable="false">
+                <img src="assets/images/ajinkyacodes-black.png" alt="ajinkyacodes" draggable="false">
             </a>
         </div>
     </div>    
