all apps meta tags updated

--- a/drink-water/index.html
+++ b/drink-water/index.html
@@ -2,8 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Drink Water</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <title>Drink Water | ajinkyacodes</title>
+    <meta property="og:title" content="Drink Water | ajinkyacodes">
+    <meta property="og:description" content="This small app tracks how much water we drank and how much is remaining.">
+    <meta name="keywords" content="ajinkya, codes, ajinkyacodes, ajinkya, gonji, ajinkyagonji, webdeveloper, developer, fullstack, programmer, github, drink, water, drink-water">
+    <meta property="og:image" content="https://ajinkyacodes.com/work/projects/drink-water/favicon.png">
+    <meta property="og:url" content="https://ajinkyacodes.com/work/projects/drink-water">
     <link rel="icon" href="favicon.png" type="image/gif" sizes="16x16">
     <link rel="stylesheet" href="style.css">
 </head>
