--- a/infinite-scroll/index.html
+++ b/infinite-scroll/index.html
@@ -2,8 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Infinite Scroll</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <title>Infinite Scroll | ajinkyacodes</title>
+    <meta property="og:title" content="Infinite Scroll | ajinkyacodes">
+    <meta property="og:description" content="A basic random photos loading app with infinite scroll.">
+    <meta name="keywords" content="ajinkya, codes, ajinkyacodes, ajinkya, gonji, ajinkyagonji, webdeveloper, developer, fullstack, programmer, github, infinite, infinite-scroll, images">
+    <meta property="og:image" content="https://ajinkyacodes.com/work/projects/infinite-scroll/favicon.png">
+    <meta property="og:url" content="https://ajinkyacodes.com/work/projects/infinite-scroll">
     <link rel="icon" href="favicon.png" type="image/gif" sizes="16x16">
     <link rel="stylesheet" href="style.css">
 </head>
