--- a/light-dark-mode/index.html
+++ b/light-dark-mode/index.html
@@ -2,8 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Light/Dark Mode</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <title>Light/Dark Mode | ajinkyacodes</title>
+    <meta property="og:title" content="Light/Dark Mode | ajinkyacodes">
+    <meta property="og:description" content="This is a light/dark mode that you can use on your website.">
+    <meta name="keywords" content="ajinkya, codes, ajinkyacodes, ajinkya, gonji, ajinkyagonji, webdeveloper, developer, fullstack, programmer, github, light mode, dark mode, light-dark mode">
+    <meta property="og:image" content="https://ajinkyacodes.com/work/projects/light-dark-mode/favicon.png">
+    <meta property="og:url" content="https://ajinkyacodes.com/work/projects/light-dark-mode">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>
     <link rel="icon" href="favicon.png" type="image/gif" sizes="16x16">
     <link rel="stylesheet" href="style.css">
