--- a/music-player/index.html
+++ b/music-player/index.html
@@ -2,8 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Music Player</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <title>Music Player | ajinkyacodes</title>
+    <meta property="og:title" content="Music Player | ajinkyacodes">
+    <meta property="og:description" content="This is a music player web app with basic functionalities like play, pause, next song, previous song & progress bar.">
+    <meta name="keywords" content="ajinkya, codes, ajinkyacodes, ajinkya, gonji, ajinkyagonji, webdeveloper, developer, fullstack, programmer, github, music, music-player">
+    <meta property="og:image" content="https://ajinkyacodes.com/work/projects/music-player/favicon.png">
+    <meta property="og:url" content="https://ajinkyacodes.com/work/projects/music-player">
     <link rel="icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"/>
     <link rel="stylesheet" href="style.css">
