--- a/new-year-countdown/index.html
+++ b/new-year-countdown/index.html
@@ -2,11 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>New Year Countdown | ajinkyacodes</title>
+    <meta property="og:title" content="New Year Countdown | ajinkyacodes">
+    <meta property="og:description" content="A basic countdown for the upcoming new year.">
+    <meta name="keywords" content="ajinkya, codes, ajinkyacodes, ajinkya, gonji, ajinkyagonji, webdeveloper, developer, fullstack, programmer, github, New Year Countdown, new-year, countdown">
+    <meta property="og:image" content="https://ajinkyacodes.com/work/projects/new-year-countdown/favicon.png">
+    <meta property="og:url" content="https://ajinkyacodes.com/work/projects/new-year-countdown">
     <link rel="icon" href="favicon.png" type="image/gif" sizes="16x16">
     <link rel="stylesheet" href="style.css" />
-    <title>New Year Countdown</title>
   </head>
   <body>
     <div id="year" class="year"></div>
