--- a/text-reader/index.html
+++ b/text-reader/index.html
@@ -2,11 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Text Reader | ajinkyacodes</title>
+    <meta property="og:title" content="Text Reader | ajinkyacodes">
+    <meta property="og:description" content="This app converts text to voice. You can select available voice formats according to your preference.">
+    <meta name="keywords" content="ajinkya, codes, ajinkyacodes, ajinkya, gonji, ajinkyagonji, webdeveloper, developer, fullstack, programmer, github, text, reader, text-reader">
+    <meta property="og:image" content="https://ajinkyacodes.com/work/projects/text-reader/favicon.png">
+    <meta property="og:url" content="https://ajinkyacodes.com/work/projects/text-reader">
     <link rel="icon" href="favicon.png" type="image/gif" sizes="16x16">
     <link rel="stylesheet" href="style.css" />
-    <title>Text Reader</title>
   </head>
   <body>
     <div class="container">
