--- a/weather-forecast/index.html
+++ b/weather-forecast/index.html
@@ -2,9 +2,14 @@
 <html lang="en"> 
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width,initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-	<title>Weather Forecast</title>
+	<title>Weather Forecast | ajinkyacodes</title>
+	<meta property="og:title" content="Weather Forecast | ajinkyacodes">
+    <meta property="og:description" content="This app shows the current weather and weather forecast of the inputted City, Country.">
+    <meta name="keywords" content="ajinkya, codes, ajinkyacodes, ajinkya, gonji, ajinkyagonji, webdeveloper, developer, fullstack, programmer, github, weather, forecast, weather-forecast">
+    <meta property="og:image" content="https://ajinkyacodes.com/work/projects/weather-forecast/favicon.png">
+    <meta property="og:url" content="https://ajinkyacodes.com/work/projects/weather-forecast">
 	<link rel="icon" href="weather-favicon.png" type="image/gif" sizes="16x16">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"/>
 	<link rel="stylesheet" media="screen" href="assets/css/style.css">
