--- a/movie-booking/index.html
+++ b/movie-booking/index.html
@@ -2,12 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <title>Movie Booking | ajinkyacodes</title>
+    <meta property="og:title" content="Movie Booking | ajinkyacodes">
+    <meta property="og:description" content="This app shows the latest movie listing and lets you book movie tickets.">
+    <meta name="keywords" content="ajinkya, codes, ajinkyacodes, ajinkya, gonji, ajinkyagonji, webdeveloper, developer, fullstack, programmer, github, movie, booking, movie-booking">
+    <meta property="og:image" content="https://ajinkyacodes.com/work/projects/movie-booking/favicon.png">
+    <meta property="og:url" content="https://ajinkyacodes.com/work/projects/movie-booking">
     <link rel="icon" href="favicon.png" type="image/gif" sizes="16x16">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>
     <link rel="stylesheet" href="style.css" />
-    <title>Movie Booking</title>
   </head>
   <body>
     <div class="movie-container">
