--- a/movies-app/index.html
+++ b/movies-app/index.html
@@ -2,8 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Movies App</title>
+    <meta property="og:title" content="Movies App | ajinkyacodes">
+    <meta property="og:description" content="This app shows the movie's basic data like posters, ratings, and overviews. You can also search some of the movies.">
+    <meta name="keywords" content="ajinkya, codes, ajinkyacodes, ajinkya, gonji, ajinkyagonji, webdeveloper, developer, fullstack, programmer, github, movies, reviews, movies-app">
+    <meta property="og:image" content="https://ajinkyacodes.com/work/projects/movies-app/favicon.png">
+    <meta property="og:url" content="https://ajinkyacodes.com/work/projects/movies-app">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>
     <link rel="icon" href="favicon.png" type="image/gif" sizes="16x16">
     <link rel="stylesheet" href="style.css">
