calculator default color set to green

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -21,10 +21,10 @@
             <a id="toggle-theme-btn" class="toggle-theme-btn"><i class="fas fa-sun"></i></a>
             <select name="themes" id="theme-select" class="theme-select">
                 <option disabled>Select</option>
-                <option value="light" selected>Light</option>
+                <option value="light">Light</option>
                 <option value="dark">Dark</option>
                 <option value="gray">Gray</option>
-                <option value="green">Green</option>
+                <option value="green" selected>Green</option>
             </select>
             <!-- Display -->
             <div class="calculator-display">
