title updated to Infinite Photos

--- a/infinite-scroll/index.html
+++ b/infinite-scroll/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <!-- Title -->
-    <h1>Unsplash API - Infinite Scroll</h1>
+    <h1>Infinite Photos</h1>
     <!-- Loader -->
     <div class="loader" id="loader">
         <img src="loader.svg" alt="Loading">
